# MMORPG_COURS_RESAUX

./: .gitignore  Cargo.toml  README.md  cargo.toml  run_all.ps1
Broker/: Cargo.toml
Broker/src/: app.rs  config.rs  main.rs
Broker/src/net/: message_handler.rs  mod.rs  network_event.rs  peer_roles.rs  relay.rs
Broker/src/pubsub/: state.rs
GameClient/: Cargo.toml
GameClient/src/: app.rs  config.rs  input.rs  main.rs  state.rs
GameClient/src/net/: broker_client.rs  broker_connection.rs  broker_message.rs  broker_subscription.rs  gameplay_message.rs  gameplay_quic.rs  input.rs  login.rs  mod.rs
GameClient/src/render/: entity_renderer.rs  mod.rs  renderable.rs
GameClient/src/world/: mod.rs  player.rs  state.rs
GameServer/: Cargo.toml  cargo.toml
GameServer/src/: app.rs  config.rs  main.rs
GameServer/src/net/: area_of_insterest.rs  area_of_interest.rs  certificate.rs  gameplay_message.rs  gameplay_quic.rs  handoff.rs  heartbeat.rs  input.rs  inter_shard_messages.rs  login.rs  mod.rs  network_event.rs  publish.rs
GameServer/src/world/: combat.rs  enemy.rs  entity.rs  mod.rs  player.rs  projectile.rs  spawn_entity.rs  state.rs
GateKeeper/: Cargo.toml  cargo.toml  login.json
GateKeeper/src/: app.rs  broker_client.rs  config.rs  handlers.rs  main.rs  protocol.rs  redis_pool.rs  server.rs
GateKeeper/src/auth/: mod.rs  service.rs  session.rs
GateKeeper/src/net/: certificate.rs  mod.rs  server.rs  stream.rs
GateKeeper/src/protocol/: mod.rs
GodotClient/: .gitignore  Cargo.toml
GodotClient/.cargo/: config.toml
GodotClient/game/: mmo_client.gdextension.uid  project.godot
GodotClient/game/scenes/: entity_registry.gd  entity_registry.gd.uid  player.gd  player.gd.uid  world.tscn
GodotClient/game/scenes/autoloads/: NetworkClient.gd  NetworkClient.gd.uid
GodotClient/game/scenes/entities/: remote_player.gd  remote_player.gd.uid  remote_player.tscn
GodotClient/game/scenes/gameplay/: color_swap.gd  color_swap.gd.uid  enemy.gd  enemy.gd.uid  enemy.tscn  enemy_renderer.gd  enemy_renderer.gd.uid  game_world.gd  game_world.gd.uid  local_enemy_spawner.gd  local_enemy_spawner.gd.uid  network_player.gd  network_player.gd.uid  network_player.tscn  player_local.gd  player_local.gd.uid  player_local.tscn  projectile.gd  projectile.gd.uid  projectile.tscn  projectile_manager.gd  projectile_manager.gd.uid
GodotClient/game/scenes/levels/: test_level.gd  test_level.gd.uid  test_level.tscn
GodotClient/game/scenes/ui/: color_swap_hud.gd  color_swap_hud.gd.uid  debug_hud.gd  debug_hud.gd.uid  debug_hud.tscn  shard_boundary_debug.gd  shard_boundary_debug.gd.uid
GodotClient/rust/: Cargo.toml
GodotClient/rust/src/: lib.rs
GodotClient/rust/src/network/: mod.rs
GodotClient/rust/src/ui/: mod.rs
GodotClient/rust/src/world/: mod.rs
GodotClient/rust/xtask/: Cargo.toml
GodotClient/rust/xtask/src/: main.rs
Launcher/: Cargo.toml
Launcher/src/: app.rs  config.rs  login.rs  main.rs  protocol.rs  resources.rs  systems.rs
Launcher/src/login/: network.rs  resources.rs  systems.rs
Launcher/src/net/: gatekeeper.rs  mod.rs  tls.rs
Launcher/src/protocol/: login.rs
Launcher/src/resources/: mod.rs  network_resources.rs  ui_resources.rs
Launcher/src/systems/: launch_game_system.rs  login_system.rs  mod.rs  network.rs  ui_system.rs
Orchestrator/: Cargo.toml
Orchestrator/src/: config.rs  heartbeat.rs  main.rs  process_manager.rs  redis_registry.rs  scaler.rs  spatial_commands.rs
Shared/: Cargo.toml  cargo.toml
Shared/src/: config.rs  lib.rs
Shared/src/protocol/: broker.rs  game.rs  login.rs  mod.rs  quic_protocol.rs  shared_types.rs  spatial.rs
Shared/src/protocol/broker/: broker_message.rs  codec.rs  config.rs  decode.rs  encode.rs  mod.rs  topic.rs  utils.rs
Shared/src/protocol/discovery/: heartbeat.rs  mod.rs  server.rs
Shared/src/protocol/game/: client.rs  combat.rs  common.rs  enemy.rs  entity.rs  mod.rs  player.rs  player_spawn.rs  projectile.rs  server.rs  server_message.rs  world_update.rs
Shared/src/protocol/http/: codec.rs  health.rs  login.rs  mod.rs  orchestrator_command.rs
Shared/src/protocol/message/: config.rs  decode.rs  encode.rs  mod.rs  network_message.rs
Shared/src/protocol/net_handles/: broker_handle.rs  mod.rs  shard_handle.rs  spatial_handler.rs
Shared/src/protocol/public_types/: client.rs  entity.rs  mod.rs  netvec2.rs  topic.rs
Shared/src/protocol/snapshots/: entity_snapshot.rs  mod.rs  player_snapshots.rs  world_snapshots.rs
Shared/src/protocol/transport/: codec.rs  game_sockets_quic.rs  gamesockets_lib.rs  mod.rs  quic.rs
Shared/src/protocol/utils/: utils.rs
SpatialService/: Cargo.toml
SpatialService/src/: main.rs  messages.rs  plugin.rs
SpatialService/src/net/: broker_client.rs  mod.rs  orchestrator_client.rs  shard_listener.rs
SpatialService/src/resources/: client_map.rs  config.rs  crossing_cooldowns.rs  entity_map.rs  handoff_queue.rs  mod.rs  net_handles.rs  quad_tree.rs
SpatialService/src/systems/: aoi.rs  crossing.rs  handoff.rs  mod.rs  receive.rs  subscriptions.rs
