[workspace]
members = [
    "Shared",
    "GateKeeper",
    "Launcher",
    "GameServer",
    "Orchestrator",
    "GameClient",
    "SpatialService",
    "Broker",
    # Godot 4.6 client — GDExtension + build automation
    "GodotClient/rust",
    "GodotClient/rust/xtask",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
bevy = "0.18.1"
bytes = "1"
redis = { version = "1.2.1", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
shared = { path = "Shared" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }