[package]
name = "broker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
game_sockets = { git = "https://github.com/VALERE91/game_sockets.git", branch = "master", default-features = false, features = ["quic"] }
