[package]
name = "game_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bevy = { version = "0.18.1", default-features = true }
bytes = "1"
reqwest = { version = "0.12.28", features = ["json"] }
shared = { path = "../Shared" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }