[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8.9"
deadpool-redis = "0.23.0"
redis = { version = "1.2.1", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../Shared" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"


