[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
axum = "0.8.9"
deadpool-redis = "0.23.0"
redis = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

