[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
shared = { path = "../Shared" }