[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
redis = { version = "1.2.1", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../Shared" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"