[package]
name = "shared"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
game_sockets = { git = "https://github.com/VALERE91/game_sockets.git", branch = "master", default-features = false, features = ["quic"] }
