[package]
name = "shared"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
game_sockets = { git = "https://github.com/VALERE91/game_sockets.git", branch = "master", default-features = false, features = ["quic"] }
