[package]
name = "mmo_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "mmo_client"
crate-type = ["cdylib"]   # Required for GDExtension

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
# Note: `shared` is intentionally NOT listed here — it pulls bevy which is
# incompatible with the GDExtension build target.  The wire protocol is
# re-implemented inline in src/network/mod.rs (decode_and_push / send_position).
tokio = { version = "1", features = ["rt", "net", "sync", "time", "macros", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

